--- a/references.bib
+++ b/references.bib
@@ -1076,6 +1076,18 @@
 	url = {}
 }
 
+@article{Turner_et_al_2012a,
+    title={Bradley-Terry Models in R: The BradleyTerry2 Package},
+    volume={48},
+    url={https://www.jstatsoft.org/index.php/jss/article/view/v048i09},
+    doi={10.18637/jss.v048.i09},
+    number={9},
+    journal={Journal of Statistical Software},
+    author={Turner, Heather and Firth, David},
+    year={2012},
+    pages={1–21}
+}
+
 @article{Boons_et_al_2013,
 	author = {Boons, T. and De Raeve, T. and Langereis, M. and Peeraer, L. and Wouters, L. and {van Wieringen}, A.},
 	journal = {Research in Developmental Disabilities},
@@ -1562,6 +1574,28 @@
 	year = {2017},
 	doi = {10.1177/0962280215586010},
 	url = {}
+}
+
+@article{Burkner_2017,
+  title = {{brms}: An {R} Package for {Bayesian} Multilevel Models Using {Stan}},
+  author = {Paul-Christian Bürkner},
+  journal = {Journal of Statistical Software},
+  year = {2017},
+  volume = {80},
+  number = {1},
+  pages = {1--28},
+  doi = {10.18637/jss.v080.i01}
+}
+
+@Article{Burkner_2018,
+  title = {Advanced {Bayesian} Multilevel Modeling with the {R} Package {brms}},
+  author = {Paul-Christian Bürkner},
+  journal = {The R Journal},
+  year = {2018},
+  volume = {10},
+  number = {1},
+  pages = {395--411},
+  doi = {10.32614/RJ-2018-017}
 }
 
 @article{Rohrer_2018,
@@ -3456,13 +3490,13 @@ responses?},
 	url = {http://www.biostat.jhsph.edu/~fdominic/teaching/bio656/software-gllamm.manual.pdf}
 }
 
-@manual{BradleyTerry2_2012,
+@manual{Turner_et_al_2012b,
 	title = {Bradley-Terry Models in R: The BradleyTerry2 Package},
-	author = {Turner, H. and Firth,D.},
+	author = {Turner, Heather and Firth, David},
 	organization = {University of Warwick},
 	address	= {},
 	year = {2012},
-	url = {https://cran.r-project.org/web/packages/BradleyTerry2/vignettes/BradleyTerry.pdf}
+	url = {https://cran.r-project.org/web/packages/BradleyTerry2/vignettes/BradleyTerry.html}
 }
 
 @manual{R_2015,
